crates/hir-ty/tests/snapshots/body_types_snapshots__library_calls.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.ArrayList;
import java.util.List;

class Body {
    int listSize() {
        List<String> list = new ArrayList<String>();
        list.add("a");
        int size = list.size();
        String first = list.get(0);
        return size;
    }
}

method listSize(): int
  locals: l0: java.util.List<java.lang.String> | l1: int | l2: java.lang.String
  exprs: e0: java.util.ArrayList<java.lang.String> | e1: java.lang.String | e2: java.util.List<java.lang.String> | e3: boolean | e4: java.util.List<java.lang.String> | e5: int | e6: int | e7: java.util.List<java.lang.String> | e8: java.lang.String | e9: int
