crates/hir-ty/tests/snapshots/body_types_snapshots__locals_and_fields.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    int count = 10;
    static Body singleton = new Body();

    int run(int[] values, int index) {
        int acc = 0;
        for (int i = 0; i < values.length; i++) {
            acc = acc + values[i];
        }
        return acc + this.count;
    }

    int arrays() {
        int[][] grid = new int[3][4];
        int[] row = grid[1];
        int[] init = { 1, 2, 3 };
        return init[0] + row[1];
    }

    int conditional(int x) {
        return x > 0 ? x : -x;
    }
}

method run(int[], int): int
  locals: l0: int[] | l1: int | l2: int | l3: int
  exprs: e2: int | e3: int | e4: int | e5: int[] | e6: int | e7: boolean | e8: int | e9: int | e10: int | e11: int | e12: int[] | e13: int | e14: int | e15: int | e16: int | e17: int | e18: com.example.Body | e19: int | e20: int
method arrays(): int
  locals: l4: int[][] | l5: int[] | l6: int[]
  exprs: e21: int | e22: int | e23: int[][] | e24: int[][] | e25: int | e26: int[] | e27: int | e28: int | e29: int | e30: int[] | e31: int[] | e32: int | e33: int | e34: int[] | e35: int | e36: int | e37: int
method conditional(int): int
  locals: l7: int
  exprs: e38: int | e39: int | e40: boolean | e41: int | e42: int | e43: int | e44: int
