crates/hir-ty/tests/snapshots/body_types_snapshots__mode_super_source.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class A {
    void m() {}
    static void s() {}
}

class B extends A {
    void use() {
        super.m();
        super.s();
    }
}

method m(): void
  locals: 
  exprs: 
method s(): void
  locals: 
  exprs: 
method use(): void
  locals: 
  exprs: e1: void | e3: <error>
  diags: e3@10:8: no-such-method: cannot find method 's'
