crates/hir-ty/tests/snapshots/body_types_snapshots__nested_invocation_argument.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.Collections;
import java.util.List;

class Body {
    void take(List<String> xs) {}

    void call() {
        take(Collections.emptyList());
    }
}

method take(java.util.List<java.lang.String>): void
  locals: l0: java.util.List<java.lang.String>
  exprs: 
method call(): void
  locals: 
  exprs: e1: java.util.List<java.lang.String> | e2: void
