crates/hir-ty/tests/snapshots/body_types_snapshots__nested_most_specific_overload.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    <T> T wrap(T t) {
        return t;
    }

    <T extends java.lang.Number> T transform(Object o) {
        return null;
    }

    String transform(String s) {
        return s;
    }

    void call() {
        String s = wrap(transform(""));
    }
}

method wrap(T): T
  locals: l0: T
  exprs: e0: T
method transform(java.lang.Object): T
  locals: l1: java.lang.Object
  exprs: e1: null
method transform(java.lang.String): java.lang.String
  locals: l2: java.lang.String
  exprs: e2: java.lang.String
method call(): void
  locals: l3: java.lang.String
  exprs: e3: java.lang.String | e4: java.lang.String | e5: java.lang.String
