crates/hir-ty/tests/snapshots/body_types_snapshots__nested_overload_no_candidate.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.Collections;
import java.util.List;

class Body {
    void take(List<String> xs) {}

    void pick(java.lang.Integer i) {}
    void pick(String s) {}

    void call() {
        take(pick(Collections.emptyList()));
    }
}

method take(java.util.List<java.lang.String>): void
  locals: l0: java.util.List<java.lang.String>
  exprs: 
method pick(java.lang.Integer): void
  locals: l1: java.lang.Integer
  exprs: 
method pick(java.lang.String): void
  locals: l2: java.lang.String
  exprs: 
method call(): void
  locals: 
  exprs: e1: java.util.List<java.lang.Object> | e2: <error> | e3: <error>
  diags: e2@12:18: wrong-argument-count: Method 'pick()' cannot be applied to given types | e3@12:13: wrong-argument-count: Method 'take()' cannot be applied to given types
